# cf-ddns

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yaml
cf-ddns/: Cargo.toml
cf-ddns-client/: Cargo.toml  README.md
cf-ddns-client/debian/: cf-ddns.service  cf-ddns.timer
cf-ddns-client/src/: cloudflare.rs  lib.rs  main.rs  worker.rs
cf-ddns-worker/: Cargo.toml  README.md  REDME.md  wrangler.toml
cf-ddns-worker/src/: lib.rs
cf-ddns-worker/tests/: wasm.rs
cf-ddns/src/: lib.rs
