[package]
name = "cf-ddns-client"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file = "../LICENSE"
version.workspace = true

[dependencies]
cf-ddns = { version = "*", path = "../cf-ddns" }
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.132"

[package.metadata.deb]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
unit-name = "cf-ddns"
