[package]
name = "cf-ddns-worker"
version = "0.1.0"
edition = "2021"
authors = ["Adam Sasine"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.4.2"
worker-macros = "0.4.2"
console_error_panic_hook = { version = "0.1.7" }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
