[package]
name = "cf-ddns-worker"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file = "../LICENSE"
version.workspace = true

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.4.2"
worker-macros = "0.4.2"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.215", features = ["derive"] }
cf-ddns = { version = "*", path = "../cf-ddns" }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
