[package]
name = "cf-ddns"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file = "../LICENSE"
version.workspace = true

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
